# jimm

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pixi.toml  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: ci.yml
.zed/: settings.json
docs/: index.md
docs/models/: CLIP.md  SigLIP.md  ViT.md
examples/: clip_inference.py  siglip_inference.ipynb  vit.py  vit_inference.py  vit_infernece.py  vit_training.py
models/CLIP/: index.html
models/SigLIP/: index.html
models/ViT/: index.html
notebooks/: vision_transformer.ipynb
search/: search_index.json
src/: vit.py
src/jimm/: __init__.py  vit.py
src/jimm/common/: transformer.py  utils.py  vit.py
src/jimm/models/: __init__.py  clip.py  siglip.py  text_transformer.py  vit.py
src/jimm/models/common/: __init__.py  vit.py
tests/: test_clip.py  test_clip_pytorch.py  test_siglip.py  test_vit.py  test_vit_pytorch.py
