[project]
name = "jimm"
version = "0.0.1"
description = "Jax Image Modeling of Models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flax>=0.10.6",
    "jaxtyping>=0.3.2",
    "safetensors>=0.5.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]


[dependency-groups]
cuda12 = [
    "jax[cuda12]>=0.6.2",
]
dev = [
    "mkdocs-material>=9.6.14",
    "mkdocstrings-python>=1.16.12",
    "pillow>=11.3.0",
    "pip>=25.1.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
    "sentencepiece>=0.2.0",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.9",
    "torch>=2.7.1",
    "transformers>=4.53.0",
]
tpu = [
    "jax[tpu]>=0.6.2",
]
dev-cuda12 = [
  {include-group = "dev"},
  {include-group = "cuda12"}
]
dev-tpu = [
  {include-group = "dev"},
  {include-group = "tpu"}
]
